# embed_monitor_sys

./: LICENSE  README.md  readme.txt  servicesInstaller.sh
Sensors/Microphone/: CMakeLists.txt
Sensors/Microphone/src/: MicMonitor.cpp
Sensors/Webcam/: CMakeLists.txt
Sensors/Webcam/src/: WebcamMonitor.cpp
Services/: embproj-mic-monitor.service  embproj-mqtt-server.service  embproj-webcam-monitor.service  embproj-webserver.service
WebServer/: CMakeLists.txt
WebServer/src/: Jamfile  httpServer.cpp
mqttClient/: CMakeLists.txt
mqttClient/src/: mqtt_client.c
mqttServer/: CMakeLists.txt
mqttServer/src/: mqtt_server.c
mysqlInitializer/: CMakeLists.txt
mysqlInitializer/src/: mysqlInitializer.c
